<resources>
    <string name="app_name">Jobsity Challenge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="toolbar_search">Search</string>
    <string name="toolbar_show_detail">Show</string>
    <string name="toolbar_episode_detail">Episode</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="page">Page</string>
    <string name="genres">Genres</string>
    <string name="summary">Summary</string>
    <string name="episodes">Episodes</string>
    <string name="episode">Episode</string>
    <string name="season">Season</string>
    <string name="seasons">Seasons</string>
    <string name="schedule">Schedule</string>
    <string name="error_title">An error has occurred</string>
    <string name="accept">Accept</string>
    <string name="search_hint">Search</string>
    <string name="search_results">Results for</string>
    <string name="search_results_empty">No results found for</string>
    <string name="search_default_title">Find TV shows</string>
</resources>