<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.show.ShowDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/showDetailImage"
            android:layout_width="0dp"
            android:layout_height="@dimen/detailShowHeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            fresco:actualImageScaleType="centerInside"
            fresco:failureImage="@drawable/ic_error_outline_24"
            fresco:placeholderImage="@drawable/ic_movie_24" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/showTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x16"
            android:layout_marginTop="@dimen/x8"
            android:layout_marginEnd="@dimen/x16"
            android:textAlignment="textStart"
            android:textSize="@dimen/s28"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/showDetailImage"
            tools:text="@tools:sample/full_names" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/genresTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x12"
            android:padding="@dimen/x4"
            android:text="@string/genres"
            android:textSize="@dimen/s16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/showTitle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x12"
            android:padding="@dimen/x4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genresTitle"
            tools:text="@tools:sample/lorem" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/scheduleTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x12"
            android:padding="@dimen/x4"
            android:text="@string/schedule"
            android:textSize="@dimen/s16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genres" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/schedule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x12"
            android:padding="@dimen/x4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scheduleTitle"
            tools:text="@tools:sample/lorem" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/summaryTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x12"
            android:padding="@dimen/x4"
            android:text="@string/summary"
            android:textSize="@dimen/s16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/schedule" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x16"
            android:layout_marginTop="@dimen/x16"
            android:layout_marginEnd="@dimen/x16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/summaryTitle"
            tools:text="@tools:sample/lorem" />

        <LinearLayout
            android:id="@+id/episodesLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/x12"
            android:layout_marginTop="@dimen/x16"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/summary">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/episodesTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/episodes"
                android:textSize="@dimen/s16"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/seasonButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/x8"
                android:backgroundTint="@color/colorAccent"
                android:drawableEnd="@drawable/ic_arrow_drop_down_24"
                android:padding="@dimen/x8"
                android:textColor="@color/colorTextPrimary"
                tools:text="Season 1" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/episodeList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/x12"
            android:layout_marginTop="@dimen/x8"
            android:layout_marginBottom="@dimen/x8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/episodesLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>